# EditorPlugins

./: .gitmodules  CMakeLists.txt  README.md  prepareTagFiles.ps1  runMt.ps1  runPt.ps1  runTests.ps1  runUt.ps1
Utils/: CMakeLists.txt
Utils/Include/: CommandHandler.hpp  CommandHandlers.hpp  Counters.hpp  EditorData.hpp  LocationSettetException.hpp  Log.hpp  LogBoost.hpp  LogConsole.hpp  Logger.hpp  MessageHandler.hpp  NppEditor.hpp  NppListViewSelector.hpp  NppLocationGetter.hpp  NppLocationSetter.hpp  NppMessagePrinter.hpp  NppPathGetter.hpp  NppPathsSelector.hpp  NppPlugin.hpp  NppTextReader.hpp  ObjectsCounter.hpp  OpenFileException.hpp  PrintableRange.hpp  PtreeUtils.hpp  Samples.hpp  ShellCommand.hpp  ShellCommandException.hpp  Sleep.hpp  Tree.hpp  WinApiUI.hpp  WinApiUIFileSystem.hpp  WinCommand.hpp  stdafx.h
Utils/Interfaces/: Command.hpp  Editor.hpp  IItemsSelector.hpp  ILocationGetter.hpp  ILocationSetter.hpp  IMessagePrinter.hpp  IPathGetter.hpp  IPathsSelector.hpp  ITextReader.hpp  UI.hpp  UIFileSystem.hpp
Utils/Source/: CommandHandler.cpp  CommandHandlers.cpp  Counters.cpp  EditorData.cpp  Log.cpp  Logger.cpp  MessageHandler.cpp  NppEditor.cpp  NppListViewSelector.cpp  NppLocationGetter.cpp  NppLocationSetter.cpp  NppMessagePrinter.cpp  NppPathGetter.cpp  NppPathsSelector.cpp  NppPlugin.cpp  NppTextReader.cpp  PtreeUtils.cpp  ShellCommand.cpp  Sleep.cpp  WinApiUI.cpp  WinApiUIFileSystem.cpp  WinCommand.cpp  stdafx.cpp
Utils/Tests/: EditorMock.hpp  MessagePrinterMock.hpp  UiMock.hpp
nppCtagPlugin/: CMakeLists.txt
nppCtagPlugin/Include/: BuildTag.hpp  CTagsController.hpp  CTagsGenerator.hpp  CTagsNavigator.hpp  CachedTagsReader.hpp  ChildrenTags.hpp  ClassDiagram.hpp  ClassDiagramConfig.hpp  ComplexTagWithMatchingName.hpp  ConfigGetter.hpp  ContainerTagsReader.hpp  CppIsTagWithAtt.hpp  CppSearchDialog.hpp  CppSearchDialogDef.h  CppTag.hpp  CppTagBuilder.hpp  CtagsMeasTags.hpp  ExtensionFields.hpp  FileScopedTagFilteringReader.hpp  FillBaseTag.hpp  GenerateTagsException.hpp  GenericKindTag.hpp  GenericKindTagBuilder.hpp  GetCppTagSearchMatcher.hpp  GridViewTagsSelector.hpp  IConfiguration.hpp  ITagHierarchySelector.hpp  ITagsReader.hpp  ITagsSelector.hpp  LazyInitializedTagsSelector.hpp  ListViewTagsSelector.hpp  MultipleTagFilesReader.hpp  Navigator.hpp  Plugin.hpp  ReadTagsProxy.hpp  Tag.hpp  TagBuilders.hpp  TagFile.hpp  TagFileReader.hpp  TagHierarchy.hpp  (+9 more)
nppCtagPlugin/Resource/: CTagsPluginDetail.rc  CppSearchDialog.rc  TagHierarchyDialog.rc
nppCtagPlugin/Source/: CTagsController.cpp  CTagsExternalCommand.cpp  CTagsGenerator.cpp  CTagsNavigator.cpp  CachedTagsReader.cpp  ChildrenTags.cpp  ClassDiagram.cpp  ComplexTagWithMatchingName.cpp  ConfigGetter.cpp  ContainerTagsReader.cpp  CppIsTagWithAtt.cpp  CppSearchDialog.cpp  CppTag.cpp  CppTagBuilder.cpp  ExtensionFields.cpp  FileScopedTagFilteringReader.cpp  GenericKindTag.cpp  GenericKindTagBuilder.cpp  GetCppTagSearchMatcher.cpp  GridViewTagsSelector.cpp  LazyInitializedTagsSelector.cpp  ListViewTagsSelector.cpp  MultipleTagFilesReader.cpp  Navigator.cpp  Plugin.cpp  ReadTagsProxy.cpp  Tag.cpp  TagBuilders.cpp  TagFile.cpp  TagFileReader.cpp  TagHierarchy.cpp  TagHierarchyDialog.cpp  TagHolder.cpp  TagParser.cpp  TagPrinter.cpp  TagsHierarchy.cpp  TreeViewTagHierSelector.cpp  dllmain.cpp
nppCtagPlugin/Tests/: CTagsMT.cpp  CTagsMT.hpp  CTagsPT.cpp  ClassDiagramMT.cpp  ClassDiagramTS.cpp  CodecTS.cpp  CppTagBuilderTS.cpp  CppTagTS.cpp  DescribeTags.cpp  DescribeTags.hpp  GenericKindTagBuilderTS.cpp  GoToChildTagMT.cpp  GoToCppTagMT.cpp  GoToTagInHierarchyMT.cpp  GoToTagMT.cpp  LocationGetterMock.hpp  LocationSetterMock.hpp  ManageLocationMT.cpp  MatcherEndsWith.hpp  MatcherHasMoreThanOneElem.hpp  MatcherTags.hpp  NavigatorTS.cpp  PTMain.cpp  TagFileReaderMT.cpp  TagHierarchySelectorMock.hpp  TagHierarchyTS.cpp  TagParserTS.cpp  TagsReaderMock.hpp  TagsSelectorMock.hpp  TestsCppTagBuilder.cpp  TestsCppTagBuilder.hpp  TestsGlobals.hpp  TestsMain.cpp  TestsTagBuilder.cpp  TestsTagBuilder.hpp
nppCtagsClientEx/: CMakeLists.txt
nppCtagsClientEx/ExternalDeps/: nppCTagsExternalIf.lib
nppCtagsClientEx/Include/: Plugin.hpp
nppCtagsClientEx/Source/: Plugin.cpp
nppHeaderSourceSwitcher/: CMakeLists.txt
nppHeaderSourceSwitcher/Include/: SavelLoadSwitchInfo.hpp  SwitchFile.hpp  SwitcherFunction.hpp  SwitcherPlugin.hpp
nppHeaderSourceSwitcher/Resource/: HeaderSourcePluginDetail.rc
nppHeaderSourceSwitcher/Source/: SavelLoadSwitchInfo.cpp  SwitchFile.cpp  SwitcherFunction.cpp  SwitcherPlugin.cpp  dllmain.cpp
nppHeaderSourceSwitcher/Tests/: SaveLoadTS.cpp  SwitchFileTS.cpp  ValidateTS.cpp
nppIncludeBrowser/: CMakeLists.txt
nppIncludeBrowser/Include/: FileHierarchy.hpp  FindCppInclude.hpp  FindInclude.hpp  FindTtcnInclude.hpp  IFileHierarchySelector.hpp  IIncludeBrowser.hpp  IncludeBrowser.hpp  IncludeBrowserController.hpp  IncludeBrowserPlugin.hpp  MutilpeFilesIncludeBrowser.hpp  TreeViewFileHierarchySelector.hpp
nppIncludeBrowser/Resource/: IncludeBrowserPluginDetail.rc
nppIncludeBrowser/Source/: FileHierarchy.cpp  FindCppInclude.cpp  FindInclude.cpp  FindTtcnInclude.cpp  IncludeBrowser.cpp  IncludeBrowserController.cpp  IncludeBrowserExternalCommand.cpp  IncludeBrowserPlugin.cpp  MutilpeFilesIncludeBrowser.cpp  TreeViewFileHierarchySelector.cpp  dllmain.cpp
nppIncludeBrowser/Tests/: FindIncludeTS.cpp
nppIncludeBrowserClientEx/: CMakeLists.txt
nppIncludeBrowserClientEx/ExternalDeps/: nppIncludeBrowserExternalIf.lib
nppIncludeBrowserClientEx/Include/: Plugin.hpp
nppIncludeBrowserClientEx/Source/: Plugin.cpp  dllmain.cpp
nppOpenFile/: CMakeLists.txt
nppOpenFile/Include/: OpenFileConfig.hpp  OpenFileDialog.hpp  OpenFileDialogDef.h  OpenFilePlugin.hpp  findFile.hpp
nppOpenFile/Resource/: OpenFileDialog.rc  OpenFilePluginDetail.rc
nppOpenFile/Source/: OpenFileConfig.cpp  OpenFileDialog.cpp  OpenFileExternalCommand.cpp  OpenFilePlugin.cpp  dllmain.cpp  findFile.cpp
nppProjectPlugin/: CMakeLists.txt
nppProjectPlugin/Include/: CTags.hpp  CreateProjectDialog.hpp  IFiles.hpp  (+11 more)
(+120 files in other folders)
